# Masters_Thesis

Surveyor 240-16/: 2026-04-22-16-44.csv  2026-04-22-17-06.csv  plotter_XZ.py  plotter_all.py  plotter_all_90_70_50.py  plotter_all_corrected.py  plotter_all_local.py  plotter_xz.py  side_view_obstacle_profile_filter.py  surveyor_csv_extractor.py
Surveyor 240-16/2026-04-22-15-40/: DEM.py  blueboat_attitude.csv  blueboat_local_position.csv  blueboat_other_mavlink.jsonl  blueboat_position.csv  comparison_plot.py  dem_metadata.json  point_cloud.py  pointcloud_comparison.py  seabed_dem.npy  surveyor_attitude.csv
Surveyor 240-16/2026-04-22-15-58/: 2026-04-22-15-58.csv  Reconstructed_forward_pointcloud.csv  blueboat_attitude.csv  blueboat_local_position.csv  blueboat_other_mavlink.jsonl  blueboat_position.csv  comparison_plot.py  forward_looking_pointcloud_world_with_mount.csv  forward_sonar_profile.py  point_cloud_2.py  pointcloud_comparison.py  side_view_comparsion_plot.py  surveyor_atof.csv  surveyor_attitude.csv
Surveyor 240-16/2026-04-22-16-15/: 2026-04-22-15-40.csv  2026-04-22-16-15.csv  Reconstructed_forward_pointcloud.csv  blueboat_other_mavlink.jsonl  blueboat_position.csv  compare_single_ping.py  comparison_plot.py  forward_looking_pointcloud_world_with_mount.csv  forward_sonar_profile.py  point_cloud_2.py  pointcloud_comparison.py  poses.csv  replay_virtual_lidar.py  side_view_comparsion_plot.py  step1_poses.py  step2_beam_direction.py
Surveyor 240-16/2026-04-22-16-44/: Reconstructed_forward_pointcloud.csv  blueboat_attitude.csv  blueboat_local_position.csv  blueboat_other_mavlink.jsonl  blueboat_position.csv  comparison_plot.py  forward_looking_pointcloud_world_with_mount.csv  forward_sonar_profile.py  point_cloud.py  point_cloud_2.py  pointcloud_comparison.py  pointcloud_comparison_2.py  side_view_comparsion_plot.py  surveyor_attitude.csv
Surveyor 240-16/2026-04-22-16-56/: 2026-04-22-16-56.csv  blueboat_attitude.csv  blueboat_local_position.csv  blueboat_other_mavlink.jsonl  blueboat_position.csv  forward_sonar_profile.py  surveyor_atof.csv  surveyor_attitude.csv
Surveyor 240-16/2026-04-22-17-01/: 2026-04-22-17-01.csv  blueboat_attitude.csv  blueboat_local_position.csv  blueboat_other_mavlink.jsonl  blueboat_position.csv  forward_sonar_profile.py  surveyor_atof.csv  surveyor_attitude.csv
Surveyor 240-16/2026-04-22-17-06/: blueboat_attitude.csv  blueboat_local_position.csv  blueboat_other_mavlink.jsonl  blueboat_position.csv  forward_sonar_profile.py  surveyor_atof.csv  surveyor_attitude.csv
Surveyor 240-16/sonar_env/: pyvenv.cfg
dave_lidar_ws/src/dave/: .pre-commit-config.yaml  gpu_lidar_sensor.sdf
dave_lidar_ws/src/dave/.docker/: jazzy.amd64.dockerfile  jazzy.arm64v8.dockerfile
dave_lidar_ws/src/dave/.github/workflows/: docker-amd64.yml
dave_lidar_ws/src/dave/dave_interfaces/: package.xml
dave_lidar_ws/src/dave/examples/dave_demos/launch/: dave_sensor.launch.py  lidar_3d_demo.launch.py
dave_lidar_ws/src/dave/extras/: ardusub-ubuntu-install-local.sh  ardusub-ubuntu-install.sh
dave_lidar_ws/src/dave/gazebo/dave_gz_multibeam_sonar/: README.md
dave_lidar_ws/src/dave/gazebo/dave_gz_multibeam_sonar/multibeam_sonar/: AcousticBeam.hh  AxisAlignedPatch2.hh  CMakeLists.txt  package.xml  sonar_calculation_cuda.cu  sonar_calculation_cuda.cuh
dave_lidar_ws/src/dave/gazebo/dave_gz_multibeam_sonar/multibeam_sonar_demo/: CMakeLists.txt  package.xml
dave_lidar_ws/src/dave/gazebo/dave_gz_multibeam_sonar/multibeam_sonar_demo/launch/: multibeam_sonar_demo.launch.py
dave_lidar_ws/src/dave/gazebo/dave_gz_multibeam_sonar/multibeam_sonar_demo/rviz/: multibeam_sonar.rviz
dave_lidar_ws/src/dave/gazebo/dave_gz_multibeam_sonar/multibeam_sonar_demo/scripts/: plotdata.py
dave_lidar_ws/src/dave/gazebo/dave_gz_multibeam_sonar/multibeam_sonar_system/: CMakeLists.txt  MultibeamSonarSystem.cc  MultibeamSonarSystem.hh  package.xml
dave_lidar_ws/src/dave/gazebo/dave_gz_multibeam_sonar/sonar_3d/: CMakeLists.txt  package.xml
dave_lidar_ws/src/dave/gazebo/dave_gz_multibeam_sonar/sonar_3d/include/sonar_3d/: Sonar3D.hh
dave_lidar_ws/src/dave/gazebo/dave_gz_multibeam_sonar/sonar_3d/src/: Sonar3D.cc
dave_lidar_ws/src/dave/gazebo/dave_gz_sensor_plugins/src/: UnderwaterCamera.cc
dave_lidar_ws/src/dave/gazebo/dave_ros_gz_plugins/: package.xml
dave_lidar_ws/src/dave/models/dave_sensor_models/: CMakeLists.txt  package.xml
dave_lidar_ws/src/dave/models/dave_sensor_models/launch/: upload_sensor.launch.py
dave_lidar_ws/src/dave/models/dave_worlds/: package.xml
dave_lidar_ws/src/dave/models/dave_worlds/worlds/: dave_multibeam_sonar.world  dave_ocean_waves_sonar.world  dave_ocean_waves_sonar_integrated.world  dvl_world.world  (+2 more)
dave_lidar_ws/src/install/: local_setup.sh  setup.sh
dave_lidar_ws/src/lidar_plotter/: package.xml  setup.cfg  setup.py
dave_lidar_ws/src/lidar_plotter/lidar_plotter/: .~lock.surveyor_atof.csv#  blueboat_attitude.csv  blueboat_local_position.csv  compare_real_sonar_to_dem.py  lidar_plotter_mod.py  lidar_scan_points.csv  lidar_truth_overlay.py  real_sonar_vs_dem_one_ping.csv  real_sonar_vs_gazebo_lidar.csv  surveyor_attitude.csv  validate_lidar_against_dem.py  validate_lidar_ranges_against_dem.py
dave_lidar_ws/src/log/: latest_build
dave_lidar_ws/src/simple_lidar_bot/models/simple_lidar_bot/: model.config  model.sdf
gazebo_models/seabed_dem/: model.config  model.sdf  model.sdf.save
gazebo_models/sonar_seabed/: model.config
gazebo_worlds/: seabed_dem.mtl  sonar_seabed.sdf
ping-python/examples/: cerulean_pointcloud_accum_node.py  cerulean_pointcloud_node.py  cerulean_yz_live_node.py  cerulean_yz_pointcloud_node.py  live_first_return_plot.py  live_plot_ros2.py  read_svlz_offline.py  surveyor_test.py
ping-python/generate/templates/: omniscan450.py.in  ping1d.py.in  ping360.py.in  s500.py.in  surveyor240.py.in
ping-python/sonar_pool_bags/rosbag2_2026_04_15-15_40_39/: metadata.yaml
ping-python/sonar_pool_bags/rosbag2_2026_04_15-18_13_58/: metadata.yaml
ping-python/sonar_pool_bags/rosbag2_2026_04_15-19_00_54/: metadata.yaml
(+15 files in other folders)
