<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>multibeam_sonar</name>
  <version>0.0.1</version>
  <description>DAVE multibeam sonar sensor</description>
  <maintainer email="woensug.choi@gmail.com">Woen-Sug Choi</maintainer>
  <maintainer email="helenamoyen@gmail.com">Helena Moyen</maintainer>
  <maintainer email="gaurav.og.9920@gmail.com">Gaurav kumar</maintainer>
  <license>Apache 2.0</license>
  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>marine_acoustic_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>dave_interfaces</depend>
  <depend>protobuf</depend>
  <test_depend>ament_lint_auto</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>