<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
  <name>multibeam_sonar_system</name>
  <version>0.0.1</version>
  <description>DAVE multibeam sonar sensor system</description>
  <maintainer email="woensug.choi@gmail.com">Woen-Sug Choi</maintainer>
  <maintainer email="helenamoyen@gmail.com">Helena Moyen</maintainer>
  <maintainer email="gaurav.og.9920@gmail.com">Gaurav kumar</maintainer>
  <license>Apache 2.0</license>
  <depend>geometry_msgs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>